# lserve_anima

./: .dockerignore  Dockerfile  client.py  pyproject.toml  server.py  supervisord.conf  utils.py
.github/workflows/: build_push.yml
